--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux": "^4.0.4"
   },
   "devDependencies": {
-    "babel-preset-expo": "^6.0.0"
+    "babel-preset-expo": "^6.0.0",
+    "react-native-debugger-open": "^0.3.19"
   },
   "private": true
 }
